# Smart-Attendence-

./: .gitignore  CHANGES_SUMMARY.txt  DATA_STRUCTURE.md  DELIVERABLES.md  DISTRIBUTION.md  DOCUMENTATION_INDEX.md  Dockerfile  EXAMPLE_USAGE.sh  FILE_INVENTORY.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  Makefile  PRD.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  START_HERE.md  TUI_IMPROVEMENTS.md  WORKFLOW_DIAGRAM.md  check_structure.py  docker-compose.yml  install.sh  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  smart-attendance.rb
.github/workflows/: test-release.yml
data/students/: FOLDER_STRUCTURE.md  students.csv
logs/: attendance.csv
reference/: embeddings.json  students_embeddings.json
scripts/: publish-docker.sh  publish-homebrew.sh  publish-pypi.sh
src/: attendance.py  detector.py  embedder.py  model.py  pipeline.py  recognizer.py  reference.py  tui.py  tui_app.py  ui.py
